--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
@@ -110,6 +110,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="DataExchangeDALForYZSSB.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
