1. 新增政务服务接口依赖的方法 2. 项目描述文件中增加DataExchangeBLLForGIS依赖

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLLCommon.cs" />
+    <Compile Include="DataExchangeBLLForGIS.cs" />
     <Compile Include="DataExchangeBLLForYZSSB.cs" />
     <Compile Include="DataExchangeBLL.cs" />
     <Compile Include="EnumerableExtension.cs" />
