项目文件中引用新增类

--- a/无锡市建筑工程基础资源管理信息平台/WxjzgcjczyTimerService/WxjzgcjczyTimerService.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/WxjzgcjczyTimerService/WxjzgcjczyTimerService.csproj
@@ -95,6 +95,8 @@
     <Compile Include="Common\DataTableHelp.cs" />
     <Compile Include="Common\Public.cs" />
     <Compile Include="Common\XmlHelper.cs" />
+    <Compile Include="model\Ap_sgxksqb_clqd.cs" />
+    <Compile Include="model\Qyxx.cs" />
     <Compile Include="YiZhanShiShenBao\DataFetchOfAJSB.cs" />
     <Compile Include="DataService.cs" />
     <Compile Include="model\DataBody.cs" />
