对于上报失败的情况，添加上报项目信息，上报项目补充信息按钮功能，因为省厅防火墙限制，批量调用接口不推荐使用

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -127,6 +127,7 @@
     <Compile Include="YhglBLL.cs" />
     <Compile Include="ZlctBLL.cs" />
     <Compile Include="ZyryBLL.cs" />
+    <Compile Include="DataExchangeBLLForUpload.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
