--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ZlctBLL.cs" />
     <Compile Include="ZyryBLL.cs" />
     <Compile Include="DataExchangeBLLForUpload.cs" />
+    <Compile Include="DataExchangeBLLForYZSSBDownload.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
