添加手动下行安监、质监申报功能

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ZlctDAL.cs" />
     <Compile Include="ZyryDAL.cs" />
     <Compile Include="DataExchangeDALForUpload.cs" />
+    <Compile Include="DataExchangeDALForYZSSBDownload.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wxjzgcjczy.Common\Wxjzgcjczy.Common.csproj">
