--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/app.config
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/app.config
@@ -11,9 +11,9 @@
         <binding name="ReceiveDataServiceHttpBinding" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-          useDefaultWebProxy="true">
+          maxBufferPoolSize="524288" maxBufferSize="65536" maxReceivedMessageSize="65536"
+          textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true"
+          messageEncoding="Text">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <security mode="None">
@@ -36,6 +36,10 @@
       <setting name="MunSupervisionProject_BLL_WebReference_WebServiceSendMSG"
         serializeAs="String">
         <value>http://221.224.147.148/ZJGSMGService/WebServiceSendMSG.asmx</value>
+      </setting>
+      <setting name="Wxjzgcjczy_BLL_NewDataService_NewDataService"
+        serializeAs="String">
+        <value>http://58.213.147.243:8080/jscedc/services/NewDataService.NewDataServiceHttpSoap11Endpoint/</value>
       </setting>
     </Wxjzgcjczy.BLL.Properties.Settings>
   </applicationSettings>
