--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -109,6 +109,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="SxxzxModel.cs" />
     <Compile Include="SystemBLL.cs" />
     <Compile Include="SzqyBLL.cs" />
     <Compile Include="TjfxBLL.cs" />
@@ -116,6 +117,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Validator.cs" />
+    <Compile Include="Web References\NewDataService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <Compile Include="Web References\WebReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -129,9 +135,21 @@
     <Compile Include="ZyryBLL.cs" />
     <Compile Include="DataExchangeBLLForUpload.cs" />
     <Compile Include="DataExchangeBLLForYZSSBDownload.cs" />
+    <Compile Include="DataExchangeBLLForJSCEDC.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Web References\NewDataService\getClientIpAxisResponse.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\NewDataService\NewDataService.wsdl" />
+    <None Include="Web References\NewDataService\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\NewDataService\TDataServiceUser.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
     <None Include="Web References\WebReference\WebServiceSendMSG.wsdl" />
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +166,17 @@
       </CachedDynamicPropName>
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>MunSupervisionProject_BLL_WebReference_WebServiceSendMSG</CachedSettingsPropName>
+    </WebReferenceUrl>
+    <WebReferenceUrl Include="http://58.213.147.243:8080/jscedc/services/NewDataService%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\NewDataService\</RelPath>
+      <UpdateFromURL>http://58.213.147.243:8080/jscedc/services/NewDataService%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Wxjzgcjczy_BLL_NewDataService_NewDataService</CachedSettingsPropName>
     </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup>
