新增各区县获取项目数据接口

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -136,6 +136,7 @@
     <Compile Include="DataExchangeBLLForUpload.cs" />
     <Compile Include="DataExchangeBLLForYZSSBDownload.cs" />
     <Compile Include="DataExchangeBLLForJSCEDC.cs" />
+    <Compile Include="DataExchangeBLLForCounty.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
