--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
@@ -89,6 +89,7 @@
     <Compile Include="ZyryDAL.cs" />
     <Compile Include="DataExchangeDALForUpload.cs" />
     <Compile Include="DataExchangeDALForYZSSBDownload.cs" />
+    <Compile Include="DataExchangeDALForCounty.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wxjzgcjczy.Common\Wxjzgcjczy.Common.csproj">
