处理一号通上传项目是立项文号为空的问题：如果立项文号为空，则重新从一号通数据库补充立项文号

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.BLL/Wxjzgcjczy.BLL.csproj
@@ -137,6 +137,8 @@
     <Compile Include="DataExchangeBLLForYZSSBDownload.cs" />
     <Compile Include="DataExchangeBLLForJSCEDC.cs" />
     <Compile Include="DataExchangeBLLForCounty.cs" />
+    <Compile Include="HtbaBLL.cs" />
+    <Compile Include="DataExchangeBLLForYHT.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
