--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.DAL.Sqlserver/Wxjzgcjczy.DAL.Sqlserver.csproj
@@ -90,6 +90,9 @@
     <Compile Include="DataExchangeDALForUpload.cs" />
     <Compile Include="DataExchangeDALForYZSSBDownload.cs" />
     <Compile Include="DataExchangeDALForCounty.cs" />
+    <Compile Include="HtbaDAL.cs" />
+    <Compile Include="DataExchangeDALForYHT.cs" />
+    <Compile Include="DatabaseOperatorYHT.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Wxjzgcjczy.Common\Wxjzgcjczy.Common.csproj">
