add ConnectionString_YHTSqlserver string

--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.Web/WxjzgcjczyPage/Config/Wxjzgcjczy.config
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.Web/WxjzgcjczyPage/Config/Wxjzgcjczy.config
@@ -20,6 +20,7 @@
 								<xs:element name="DatabaseType_Sqlserver" type="xs:string" minOccurs="0" />
 								<xs:element name="ConnectionString" type="xs:string" minOccurs="0" />
 								<xs:element name="ConnectionString_Sqlserver" type="xs:string" minOccurs="0" />
+								<xs:element name="ConnectionString_YHTSqlserver" type="xs:string" minOccurs="0" />
 								<xs:element name="DebugBigFileUpload" type="xs:boolean" minOccurs="0" />
 								<xs:element name="UpFileMaxChunkSize" type="xs:long" minOccurs="0" />
 								<xs:element name="UpFileMaxSize" type="xs:long" minOccurs="0" />
@@ -60,8 +61,9 @@
 		<DatabaseType_Sqlserver>sqlserver2008</DatabaseType_Sqlserver>
 		<!---->
 		<ConnectionString>Data Source=ORCL;Persist Security Info=True;User ID=EPOINT_WXSZJS2;Password=11111;Unicode=True</ConnectionString>
-		<ConnectionString_Sqlserver>data source=192.168.153.188;Initial Catalog=WJSJZX;user id=sa;password=wxjsj^20150409;</ConnectionString_Sqlserver>
-		<!-- [local database] <ConnectionString_Sqlserver>data source=localhost;Initial Catalog=WJSJZX;user id=sa;password=GHadmin1234;</ConnectionString_Sqlserver>-->
+		<!-- <ConnectionString_Sqlserver>data source=192.168.153.188;Initial Catalog=WJSJZX;user id=sa;password=wxjsj^20150409;</ConnectionString_Sqlserver>-->
+		<ConnectionString_Sqlserver>data source=localhost;Initial Catalog=WJSJZX;user id=sa;password=GHadmin1234;</ConnectionString_Sqlserver>
+		<ConnectionString_YHTSqlserver>data source=192.168.153.189;Initial Catalog=db_adminexam;user id=sa;password=wxjsj^201701;</ConnectionString_YHTSqlserver>
 
 		<!--<ConnectionString>User ID=EPOINT_WXSZJS2;Password=11111;Data Source=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = localhost)(PORT = 1521))(CONNECT_DATA = (SERVICE_NAME = orcl)))</ConnectionString>-->
 
